[gd_scene load_steps=8 format=3 uid="uid://c1h7jvdxxjgs6"]

[ext_resource type="Theme" uid="uid://g5w7cullef56" path="res://default.tres" id="1_6rd86"]
[ext_resource type="Script" path="res://scenes/cardUi/card_ui.gd" id="2_i70lf"]
[ext_resource type="Script" path="res://scenes/cardUi/card_state_machine.gd" id="3_dq424"]
[ext_resource type="Texture2D" uid="uid://lu5amx1oka52" path="res://Graphics/cards/102.png" id="3_s050r"]
[ext_resource type="Script" path="res://scenes/cardUi/card_states/card_base_state.gd" id="4_c11po"]
[ext_resource type="Script" path="res://scenes/cardUi/card_states/card_clicked_state.gd" id="5_c6hdi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kho42"]
size = Vector2(75, 125)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(75, 125)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1205.0
offset_bottom = -595.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6rd86")
script = ExtResource("2_i70lf")

[node name="CardImage" type="TextureRect" parent="."]
texture_filter = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 2.0
offset_right = 1.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.98, 0.98)
texture = ExtResource("3_s050r")
expand_mode = 1

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(37.5, 62.5)
shape = SubResource("RectangleShape2D_kho42")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_dq424")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_c11po")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_c6hdi")
state = 1

[node name="Color" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -121.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
